--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "title": "freeboard",
   "version": "1.1.3",
   "main": "server.js",
+  "logo": "logo.png",
   "devDependencies": {
     "grunt": "0.4.1",
     "grunt-contrib-concat": "0.1.3",
